# kb_repo

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  VERSIONING.md  pyproject.toml  requirements.txt  style.md
.github/workflows/: ci.yml
configs/: build_kb.yaml  calibrate.yaml  embed.yaml  env.yaml  ingest.yaml  link.yaml
scripts/: ci_smoke.sh
src/: __init__.py
src/build_kb/: __init__.py  ids.py
src/calibrate/: __init__.py
src/embed/: __init__.py  indexer.py
src/ingest/: __init__.py
src/link/: __init__.py
src/normalize/: __init__.py  text.py
src/utils/: __init__.py  env_probe.py
tests/: test_ids.py  test_indexer.py  test_normalize_text.py  test_sanity_misc.py
